--- a/MoviesApp/Info.plist
+++ b/MoviesApp/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>aiv</string>
+		<string>disneyplus</string>
 		<string>https</string>
 		<string>nflx</string>
 	</array>
